# ZeroLeaks

./: .gitignore  Readme.md  proof.json  random.sh
circuits/: babel.config.js  package-lock.json  package.json  pnpm-lock.yaml  test.tmp  tsconfig.json
circuits/dizkus-scripts/: circuit.env  gen_chunk_zkey.sh  gen_proof.sh  gen_vk.sh  generate_input.js
circuits/helpers/: email_content_helper.ts  index.ts  merkle-multiproofs.ts  serilizer.ts
circuits/key_export/: Cargo.toml  test.json  verification_key.json  verifying_key.hex
circuits/key_export/src/: main.rs
circuits/src/: continous_merkle.circom  continous_test.circom  email_Content.circom  email_helpers.circom  simple_merkle.circom
circuits/test/: config.js  continous_merkle.test.ts  email_content.test.ts  email_merkle.test.ts  email_verification.test.js  merkle_test.test.ts  proof.json
circuits/test/emls/: sui.eml  test.eml  test_2.eml
contracts/: Move.toml
contracts/crypto_test/: Cargo.toml
contracts/sources/: bounties.move  contracts.move  dao.move  lz_coin.move
contracts/tests/: contracts_tests.move  dao_bounty_test.move  verifier_tests.move
docs/: book.toml
docs/src/: SUMMARY.md  architechture.md  how_to_emls.md  introduction.md  risk_associated.md  tech_foundation.md  tokenomics.md  user_docs.md  what_next.md
server/: .gitignore  README.md  THREADED_COMMENTS_API.md  package.json  pnpm-lock.yaml
server/src/: index.ts
ui/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx  providers.tsx
(+105 files in other folders)
