[package]
name = "key_export"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = "0.5.0"
ark-circom = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
ark-snark = "0.5.1"
hex = { version = "0.4.3", features = ["serde"] }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
